welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: method diag is defined twice
  conflicting symbols both originated in file 'plm.runtime13.Diagonal'
def diag(){
    ^